<resources>
    <string name="app_name">MathFlash Cards</string>
    <string name="show_answer">Show Answer</string>
    <string name="hide_answer">"Hide Answer"</string>
    <string name="operand">Operand</string>
    <string name="operator_2">Operator 2</string>
    <string name="operator_1">Operator 1</string>
    <string name="home">Home</string>
    <string name="when_clicked_on_it_navigate_to_main_activity">When clicked on it navigate to Main acitivity</string>
    <string name="next">Next</string>
    <string name="card_count">1/10</string>
    <string name="timer">00:00</string>
    <string name="when_clicked_on_it_generate_new_flash_card">When Clicked on it, generate new flash card</string>
    <string name="it_will_give_multiplication_flash_cards">It will give multiplication flash cards</string>
    <string name="it_will_give_division_flash_cards">It will give division flash cards</string>
    <string name="it_will_give_subtraction_flash_cards">It will give subtraction flash cards</string>
    <string name="it_will_give_addition_flash_cards">It will give addition flash cards</string>
</resources>