<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_title_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_view_title"
        android:layout_margin="@dimen/padding_default"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_add_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/it_will_give_addition_flash_cards"
                android:onClick="onAddClicked"
                android:src="@drawable/ic_addition_symbol" />

            <ImageButton
                android:id="@+id/button_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/it_will_give_subtraction_flash_cards"
                android:onClick="onSubClicked"
                android:src="@drawable/ic_subtraction_symbol" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_mul_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/padding_default">

            <ImageButton
                android:id="@+id/button_mul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/it_will_give_multiplication_flash_cards"
                android:onClick="onMulClicked"
                android:src="@drawable/ic_multiplication_symbol" />

            <!-- android:background="@drawable/ripple" -->
            <ImageButton
                android:id="@+id/button_div"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/it_will_give_division_flash_cards"
                android:onClick="onDivClicked"
                android:src="@drawable/ic_division_symbol" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
